# MonaLisa

./: .gitignore  Controller.cs  Optimize.cpp  README.md  kinematic_model.hpp  server.cs
CPPInterface/: CMakeLists.txt  calc.cpp  client.cpp  client.h
Server/: demo_server.cs  server.cs
UnityRobotHead/: .gitignore
UnityRobotHead/Assets/: BaseColor.mat  Eye-color.mat  New Material.mat  tag.fbx
UnityRobotHead/Assets/Colors/: New Material.mat
UnityRobotHead/Assets/Materials/: SVGMat.003.mat
UnityRobotHead/Assets/Scenes/: SampleScene.unity  b2b.unity
UnityRobotHead/Assets/Scripts/: Client.cs  Controller.cs
UnityRobotHead/Assets/prefabs/: prefab_camera.prefab  prefab_eye.prefab  prefab_eyev2.prefab  prefab_head.prefab  prefab_plane.prefab  prefab_user.prefab
UnityRobotHead/ProjectSettings/: ProjectSettings.asset  TagManager.asset
cpp/: CMakeLists.txt  RigidTransformation.cpp  RigidTransformation.hpp  client.cpp  kinematic_model.cpp  lisa_driver.cpp  optimize.cpp  rigid_transformation.cpp  test.cpp
cpp/include/: client.h  rigid_transformation.h
libmonalisa/: CMakeLists.txt
libmonalisa/include/: head.h  kinematic_link.h  rigid_transformation.h
libmonalisa/src/: head.cpp  kinematic_link.cpp  optimize.cpp  rigid_transformation.cpp  test.cpp
